--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -27,7 +27,6 @@
             android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/name"
-                android:background="@android:color/transparent"
                 android:hint="Name"
                 android:padding="15dp"
                 android:inputType="textCapWords"
@@ -53,36 +52,36 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:weightSum="2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal"
+        android:weightSum="2">
 
         <TextView
             android:id="@+id/signup"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginRight="10dp"
+            android:layout_weight="1"
             android:background="@color/teal_700"
-            android:textColor="@color/white"
             android:gravity="center"
             android:text="@string/signup"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp" />
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginLeft="10dp"
+            android:layout_weight="1"
             android:background="@color/teal_700"
-            android:textColor="@color/white"
             android:gravity="center"
             android:text="Login"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp" />
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
 
     </LinearLayout>
