--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/name"
-                android:hint="Name"
+                android:hint="@string/name"
                 android:padding="15dp"
                 android:inputType="textCapWords"
                 android:layout_width="match_parent"
@@ -35,14 +35,15 @@
 
             <EditText
                 android:id="@+id/email"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:padding="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
+
             <EditText
                 android:id="@+id/password"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:padding="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -63,7 +64,7 @@
             android:id="@+id/signup"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:background="@color/teal_700"
             android:gravity="center"
@@ -75,11 +76,11 @@
             android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:background="@color/teal_700"
             android:gravity="center"
-            android:text="Login"
+            android:text="@string/login"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
